src/connect.css
section#page-connect {
  display: flex;
  flex-direction: column;
}

h1 {
  margin: 0;
}

.gridform {
  display: grid;
  gap: 5px;
  max-width: 600px;
  text-align: left;
}

input:invalid,
textarea:invalid {
  border: 2px var(--error) solid;
  border-radius: 1px;
}

button.invalid,
select:invalid {
  color: var(--on-error-container);
  background-color: var(--error-container);
}

.error {
  color: var(--error);
}

@media (width >= 450px) {
  .gridform {
    grid-template-columns: auto 1fr;
  }
  .gridform button {
    grid-column: 2;
  }
}

.crosshair {
  position: absolute;
}

.crosshair {
  background-color: var(--outline);
}

#overpass-query {
  height: 85px;
  overflow: scroll;
  font-family: monospace;
  white-space: pre;
}

.spacer {
  flex-grow: 1;
}

.gridform hr {
  grid-column-start: 1;
  grid-column-end: -1;
  width: 100%;
}

footer {
  margin-left: auto;
  font-size: small;
}

footer ul {
  margin: 0;
}

footer li {
  display: inline-block;
}

footer li::before {
  display: inline-block;
  margin-right: 1ch;
  margin-left: 1ch;
  content: "•";
}

footer li:first-child::before {
  display: none;
}

.range-group {
  display: flex;
}

.range-group input {
  flex-grow: 1;
}

